--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
                 <input type="text" id="query" class="card"><div id="buttonWrapper"></div>
             </div>
             <div id="wrapper1">
-                <div id="bubblechart" class="chart"></div>
+                <div id="trend-bubbles" class="chart"></div>
+                <div id="source-bubbles" class="chart"></div>
                 <div id="details" class="chart"></div>
             </div>
             <div id="filter" class="chart"></div>
