--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
                 <div id="source-bubbles" class="chart"></div>
                 <div id="details" class="chart"></div>
             </div>
-            <div id="filter" class="chart"></div>
-            <div id="desc">
-                description
-            </div>
+            <div id="candidate-bars" class="chart"></div>
         </div>
     </body>
     <script src="https://d3js.org/d3.v3.min.js"></script>
